# esp-idf-arduino-bluepad32-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  platformio.ini  sdkconfig  sdkconfig.defaults
.github/workflows/: esp-idf-latest.yaml
components/bluepad32/: CMakeLists.txt  uni_bluetooth.c  uni_bt.c  uni_bt_bredr.c  uni_bt_conn.c  uni_bt_sdp.c  uni_bt_setup.c  uni_console.c  uni_controller.c  uni_esp32.c  uni_hid_device.c  uni_hid_parser_switch.c  uni_main.c
components/bluepad32_arduino/: ArduinoBluepad32.cpp  ArduinoController.cpp  CMakeLists.txt  arduino_bootstrap.cpp  arduino_platform.c
components/bluepad32_arduino/include/: ArduinoBluepad32.h  ArduinoConsole.h  ArduinoController.h  ArduinoControllerData.h  ArduinoControllerProperties.h  ArduinoKeyboardConstants.h  arduino_platform.h
components/btstack/: CMakeLists.txt  btstack_port_esp32.c  btstack_stdio_esp32.c
examples/ota/: CMakeLists.txt  README.md  sdkconfig.defaults
lib/bluepad32_arduino/: ArduinoConsole.cpp  ArduinoConsole.h  ArduinoController.cpp  ArduinoController.h  ArduinoControllerData.h  ArduinoGamepad.h  ArduinoGamepadProperties.h  arduino_bootstrap.cpp  arduino_bootstrap.h  (+1 more)
main/: CMakeLists.txt  arduino_bootstrap.cpp  arduino_main.cpp  arduino_platform.c  arduino_platform.h  main.c  racer.h  sketch.cpp
main/api/: ArduinoBluepad32.cpp  ArduinoController.cpp
main/api/include/: ArduinoBluepad32.h  ArduinoController.h  ArduinoControllerData.h  ArduinoControllerProperties.h  ArduinoKeyboardConstants.h
patches/: 0001-Call-initBluepad32-when-AUTOSTART_ARDUINO-is-enabled.patch
(+17 files in other folders)
